syntax = "proto3";
package mycel.furnace.v1;

import "gogoproto/gogo.proto";
import "mycel/furnace/v1/burn_amount.proto";
import "mycel/furnace/v1/epoch_burn_config.proto";
import "mycel/furnace/v1/params.proto";

option go_package = "github.com/mycel-domain/mycel/x/furnace/types";

// GenesisState defines the furnace module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  EpochBurnConfig epoch_burn_config = 2 [ (gogoproto.nullable) = false ];
  repeated BurnAmount burn_amounts = 3 [ (gogoproto.nullable) = false ];
}
